Fixed bug "UnsupportedOperationException" in GuiMixin::onlyNarrateChangedPart (actually this time)